--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -19,13 +19,10 @@ provides:
     version: 1.00
 requires:
   Algorithm::Diff: 1.1902
-  Data::Dumper::Concise: 2.02
+  Data::TreeDumper: 0.4
   English: 1.04
-  File::Basename: 2.82
-  File::Spec: 3.4
   File::Temp: 0.2301
   Getopt::Long: 2.41
-  List::AllUtils: 0.03
   Log::Handler: 0.78
   Marpa::R2: 2.066
   Moo: 1.002
@@ -33,7 +30,6 @@ requires:
   Perl6::Slurp: 0.03
   Pod::Usage: 1.36
   Tree::DAG_Node: 1.12
-  autodie: 2.16
   charnames: 0
   open: 0
   perl: v5.14.2
