Patch bug in Data::TreeDumper::Renderer::Marpa

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.78
 
+[V 1.01]
+Date=2013-08-16T14:53:00
+Comments= <<EOT
+- Explicitly test for missing parameters marpa_bnf_file and user_bnf_file. Die if missing.
+- Patch Data::TreeDumper::Renderer::Marpa. The first 2 daughters of each node are the offset and length
+of the token within the input stream. Their attribute type should be 'Marpa', not 'Grammar'.
+EOT
+
 [V 1.00]
 Date=2013-08-06T15:47:00
 Comments=- Original version
