Expand parser. Handles stringparser.bnf, json.1.bnf

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -9,6 +9,7 @@ Comments= <<EOT
 - Explicitly test for missing parameters marpa_bnf_file and user_bnf_file. Die if missing.
 - Patch Data::TreeDumper::Renderer::Marpa. The first 2 daughters of each node are the offset and length
 of the token within the input stream. Their attribute type should be 'Marpa', not 'Grammar'.
+- Add method compress_tree() to the parser.
 EOT
 
 [V 1.00]
