--- a/Changelog.ini
+++ b/Changelog.ini
@@ -10,6 +10,7 @@ Comments= <<EOT
 - Patch Data::TreeDumper::Renderer::Marpa. The first 2 daughters of each node are the offset and length
 of the token within the input stream. Their attribute type should be 'Marpa', not 'Grammar'.
 - Add method compress_tree() to the parser.
+- Remove the 'level' attribute from the nodes in the raw tree. It didn't offer any value.
 EOT
 
 [V 1.00]
