--- a/Changelog.ini
+++ b/Changelog.ini
@@ -9,8 +9,8 @@ Comments= <<EOT
 - Explicitly test for missing parameters marpa_bnf_file and user_bnf_file. Die if missing.
 - Patch Data::TreeDumper::Renderer::Marpa. The first 2 daughters of each node are the offset and length
 of the token within the input stream. Their attribute type should be 'Marpa', not 'Grammar'.
-- Add method compress_tree() to the parser.
 - Remove the 'level' attribute from the nodes in the raw tree. It didn't offer any value.
+- Add method compress_tree(), compress_branch(), cooked_tree() and cooked_tree_file().
 EOT
 
 [V 1.00]
