Expand docs for 1.01 release

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -6,11 +6,15 @@ Changelog.Parser=Config::IniFiles V 2.78
 [V 1.01]
 Date=2013-08-16T14:53:00
 Comments= <<EOT
-- Explicitly test for missing parameters marpa_bnf_file and user_bnf_file. Die if missing.
-- Patch Data::TreeDumper::Renderer::Marpa. The first 2 daughters of each node are the offset and length
+- Explicitly test for the files marpa_bnf_file and user_bnf_file. Die if missing.
+- Patch Data::TreeDumper::Renderer::Marpa. The first 2 daughters of each node are the start and end offsets
 of the token within the input stream. Their attribute type should be 'Marpa', not 'Grammar'.
 - Remove the 'level' attribute from the nodes in the raw tree. It didn't offer any value.
-- Add method compress_tree(), compress_branch(), cooked_tree() and cooked_tree_file().
+- Add methods clean_name(), compress_tree(), compress_branch(), cooked_tree() and cooked_tree_file().
+- Change the no_attributes option to bind_attributes. This reverses the sense of the option it's true, but
+at least makes it positive logic (as it should have been all along). This was bugging me, both here and
+(potentially) in the next module in the chain, Marpa::Grammar::GraphViz2.
+- Expand the docs to cover all the features.
 EOT
 
 [V 1.00]
