--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -3,46 +3,46 @@ abstract: 'Converts a Marpa grammar into a tree using Tree::DAG_Node'
 author:
   - 'Ron Savage <ron@savage.net.au>'
 build_requires:
-  ExtUtils::MakeMaker: 6.59
-  Test::More: 0.98
+  ExtUtils::MakeMaker: '6.59'
+  Test::More: '0.98'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.131560, CPAN::Meta::Converter version 2.133380'
+generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.131560, CPAN::Meta::Converter version 2.142060'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: MarpaX-Grammar-Parser
 provides:
   Data::TreeDumper::Renderer::Marpa:
     file: lib/Data/TreeDumper/Renderer/Marpa.pm
-    version: 1.01
+    version: '1.01'
   MarpaX::Grammar::Parser:
     file: lib/MarpaX/Grammar/Parser.pm
-    version: 1.01
+    version: '1.01'
   MarpaX::Grammar::Parser::Dummy:
     file: lib/MarpaX/Grammar/Parser.pm
-    version: 1.01
+    version: '1.01'
 requires:
-  Data::TreeDumper: 0.4
-  English: 1.04
-  File::ShareDir: 1.03
-  File::Temp: 0.2301
-  Getopt::Long: 2.41
-  Log::Handler: 0.78
-  Marpa::R2: 2.066
-  Moo: 1.002
-  Path::Tiny: 0.025
-  Perl6::Slurp: 0.03
-  Pod::Usage: 1.36
-  Tree::DAG_Node: 1.12
-  charnames: 0
-  open: 0
-  perl: 5.014
-  strict: 0
-  utf8: 0
-  warnings: 0
+  Data::TreeDumper: '0.4'
+  English: '1.04'
+  File::ShareDir: '1.03'
+  File::Temp: '0.2301'
+  Getopt::Long: '2.41'
+  Log::Handler: '0.78'
+  Marpa::R2: '2.066'
+  Moo: '1.002'
+  Path::Tiny: '0.025'
+  Perl6::Slurp: '0.03'
+  Pod::Usage: '1.36'
+  Tree::DAG_Node: '1.12'
+  charnames: '0'
+  open: '0'
+  perl: '5.014'
+  strict: '0'
+  utf8: '0'
+  warnings: '0'
 resources:
   license: http://www.perlfoundation.org/artistic_license_2_0
-version: 1.01
+version: '1.01'
