Update to re-genenerate Marpa.Grammar.svg

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,15 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.02]
+Date=2014-09-09T09:57:00
+Comments= <<EOT
+- Remove redundant Algorithm::Diff from t/runner.t.
+- Switch from Perl6::Slurp to File::Slurp.
+- Update copy of Marpa's metag.bnf.
+- Re-generate http://savage.net.au/Ron/html/graphviz2.marpa/Marpa.Grammar.svg.
+EOT
+
 [V 1.01]
 Date=2013-08-16T14:53:00
 Comments= <<EOT
