--- a/Changelog.ini
+++ b/Changelog.ini
@@ -9,7 +9,7 @@ Comments= <<EOT
 - Remove redundant Algorithm::Diff from t/runner.t.
 - Switch from Perl6::Slurp to File::Slurp.
 - Update copy of Marpa's metag.bnf.
-- Re-generate http://savage.net.au/Ron/html/graphviz2.marpa/Marpa.Grammar.svg.
+- Re-generate share/metag.*.tree.
 EOT
 
 [V 1.01]
