--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -28,13 +28,13 @@ requires:
   Data::TreeDumper: '0.4'
   English: '1.04'
   File::ShareDir: '1.03'
+  File::Slurp: '9999.19'
   File::Temp: '0.2301'
   Getopt::Long: '2.41'
   Log::Handler: '0.78'
   Marpa::R2: '2.066'
   Moo: '1.002'
   Path::Tiny: '0.025'
-  Perl6::Slurp: '0.03'
   Pod::Usage: '1.36'
   Tree::DAG_Node: '1.12'
   charnames: '0'
