Update metag.bnf and re-create all output files

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -9,7 +9,8 @@ Comments= <<EOT
 - Remove redundant Algorithm::Diff from t/runner.t.
 - Switch from Perl6::Slurp to File::Slurp.
 - Update copy of Marpa's metag.bnf.
-- Re-generate share/metag.*.tree.
+- Add share/json.3.bnf.
+- Re-generate share/*.[cooked,raw].*.
 EOT
 
 [V 1.01]
