--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.03]
+Date=2014-09-19T11:40:00
+Comments= <<EOT
+- Handle new Marpa output (from when it dumps its own grammar).
+- Update Build.PL and Makefile.PL about this module being on github.
+- Re-generate share/*.[cooked,raw].*.
+EOT
+
 [V 1.02]
 Date=2014-09-09T09:57:00
 Comments= <<EOT
