--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,13 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.04]
+Date=2014-10-06T15:32:00
+Comments= <<EOT
+- Bump the required version of Marpa::R2 from V 2.066000 to V 2.096000. This is necessary since the forgiving
+and latm tokens were introduced after V 2.066000, and I was starting to get CPAN tester failures.
+EOT
+
 [V 1.03]
 Date=2014-09-19T11:40:00
 Comments= <<EOT
