--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -6,7 +6,7 @@ build_requires:
   ExtUtils::MakeMaker: '6.59'
   Test::More: '0.98'
 configure_requires:
-  Module::Build: '0.38'
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 0
 generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.131560, CPAN::Meta::Converter version 2.142060'
 license: artistic_2
@@ -32,7 +32,7 @@ requires:
   File::Temp: '0.2301'
   Getopt::Long: '2.41'
   Log::Handler: '0.78'
-  Marpa::R2: '2.066'
+  Marpa::R2: '2.096'
   Moo: '1.002'
   Path::Tiny: '0.025'
   Pod::Usage: '1.36'
