--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,8 +3,15 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.06]
+Date=2014-10-22T13:37:00
+Comments= <<EOT
+- Oops. Forgot to run homegrown validate.build.make.pl to cross-check pre-reqs.
+Added List::AllUtils and Types::Standard.
+EOT
+
 [V 1.05]
-Date=2014-10-21T17:45:00
+Date=2014-10-19T17:45:00
 Comments= <<EOT
 - Update BNF from Marpa (share/metag.bnf).
 - Update BNF from MarpaX::Languages::C::AST (share/c.ast.bnf).
