--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.07]
+Date=2014-10-22T16:13:00
+Comments= <<EOT
+- !!!!!!!!!!!!!!Unreleased
+- Clean up search for first rule (in case there is no :start rule).
+- Clean up visual breaks, which should have all be 50 chars long.
+EOT
+
 [V 1.06]
 Date=2014-10-22T13:37:00
 Comments= <<EOT
