--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.09]
+Date=2015-02-06T09:21:00
+Comments= <<EOT
+- Tree::DAG_Node V 1.24 changed the output indentation slightly, and the expected output was
+hard-coded in t/basic.t, so that was fixed.
+- Update Makefile.PL to require V 1.24 of Tree::DAG_Node.
+EOT
+
 [V 1.08]
 Date=2014-10-25T17:20:00
 Comments= <<EOT
