--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=MarpaX::Grammar::Parser
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 2.00]
+Date=2015-03-17T08:38:00
+Comments=- Replace Data::TreeDumper with Data::RenderAsTree.
+
 [V 1.09]
 Date=2015-02-06T09:21:00
 Comments= <<EOT
