Update Changes, and the docs in general

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -5,7 +5,14 @@ Changelog.Parser=Config::IniFiles V 2.83
 
 [V 2.00]
 Date=2015-03-17T08:38:00
-Comments=- Replace Data::TreeDumper with Data::RenderAsTree.
+Comments= <<EOT
+- Replace Data::TreeDumper with Data::RenderAsTree.
+- Remove the feature with allow the user to output the user's BNF rules as a hashref. I see
+little value in this feature.
+- Remove various output files from share/. E.g. trees with attributes included. They can easily
+be generated using the bind_attributes option to bnf2tree.pl.
+- Remove share/*.treedumper. Now that Data::RenderAsTree is used, that file is obsolete.
+EOT
 
 [V 1.09]
 Date=2015-02-06T09:21:00
