Start fixing the docs for the new tree output format

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -7,7 +7,7 @@ Changelog.Parser=Config::IniFiles V 2.83
 Date=2015-03-17T08:38:00
 Comments= <<EOT
 - Replace Data::TreeDumper with Data::RenderAsTree.
-- Remove the feature with allow the user to output the user's BNF rules as a hashref. I see
+- Remove the feature which allowed the user to output the user's BNF rules as a hashref. I see
 little value in this feature.
 - Remove various output files from share/. E.g. trees with attributes included. They can easily
 be generated using the bind_attributes option to bnf2tree.pl.
