Update prereqs. Start cleaning up tests, since some fail for recent Perls

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -14,6 +14,8 @@ See http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html for deta
 - Switch from File::Slurp to File::Slurper, since it's my new standard, and because CPAN
 testers report the former gets, for recent Perls, a deprecated warning about using sysread()
 on a utf8 file handle.
+- Patch Parser.pm to untaint both the BNF and the input stream.
+- Rework because some tests fail with recent Perls.
 EOT
 
 [V 2.00]
